fixes sidebar visibility issue and updates user menu label class

--- a/ui/app/styles/components/sidebar.scss
+++ b/ui/app/styles/components/sidebar.scss
@@ -122,6 +122,7 @@
 .hc-nav-container {
   .popup-menu-content {
     .menu-label {
+      color: $black;
       font-size: 14px;
       font-weight: $font-weight-bold;
       text-transform: unset;
